# Emu-PRBS

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  code.html  settings.toml  tailwind.css
assets/: tailwind.css
assets/styling/: main.css
src/: main.rs
src/Application/: apputils.rs  gitutils.rs  mod.rs
src/Panels/: cloud_panel.rs  emulators_panel.rs  games_panel.rs  github_panel.rs  mod.rs  play_panel.rs  settings_panel.rs
src/application/: app_emu.rs  app_toml.rs  mod.rs
