[package]
name = "Chrysocolle"
version = "0.1.0"
authors = ["Probbes"]
edition = "2024"

[[bin]]
name = "Chrysocolle"
path = "src/main.rs"

[dependencies]
crc32fast = "1.5.0"
dioxus = { version = "0.7.1", features = ["fullstack"] }
dioxus-desktop = "0.7.3"
fs-utils = "1.1.4"
open = "5.3.3"
rfd = "0.17.2"
serde = "1.0.228"
symlink = "0.1.0"
toml = "1.0.6"

[features]
default = ["desktop"]
# The feature that are only required for the web = ["dioxus/web"] build target should be optional and only enabled in the web = ["dioxus/web"] feature
web = ["dioxus/web"]
# The feature that are only required for the desktop = ["dioxus/desktop"] build target should be optional and only enabled in the desktop = ["dioxus/desktop"] feature
desktop = ["dioxus/desktop"]
# The feature that are only required for the mobile = ["dioxus/mobile"] build target should be optional and only enabled in the mobile = ["dioxus/mobile"] feature
mobile = ["dioxus/mobile"]
# The feature that are only required for the server = ["dioxus/server"] build target should be optional and only enabled in the server = ["dioxus/server"] feature
server = ["dioxus/server"]
